--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="description" content="Youth Hostel - Creative HTML Template">
-    <meta name="author" content="CreateIT">
+    <meta name="description" content="Urban Pods Pousada">
+    <meta name="author" content="Urban Pods">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -960,9 +960,9 @@
 
     <!-- Less -->
 
-
+    <script src="./demo/generator.php"></script>
     <!-- switcher -->
-    <script src="../demo/js/demo.js"></script>
+    <script src="./demo/js/demo.js"></script>
 
     <!-- 
     <div id="stylechooser">
